--- a/events.html
+++ b/events.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   
  
-  <script src='./dist/script.min.js'></script>
+  <script src='./dist/events.bundle.js'></script>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
